<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cadastroex.Lista" >

    <item
        android:id="@+id/menu_novo"
        android:icon="@drawable/ic_novo"
        android:showAsAction="always"
        android:title="@string/novo"/>
    <item
        android:id="@+id/menu_mapa"
        android:icon="@drawable/ic_mapa"
        android:showAsAction="always"
        android:title="@string/mapa"/>
    <item
        android:icon="@drawable/ic_opcoes"
        android:showAsAction="always"
        android:title="@string/mais_op_es">
        <menu>
            <item
                android:id="@+id/menu_enviar_alunos"
                android:icon="@drawable/ic_enviar"
                android:showAsAction="always"
                android:title="@string/sincronizar"/>
            <item
                android:id="@+id/menu_receber_provas"
                android:icon="@drawable/ic_receber"
                android:showAsAction="always"
                android:title="@string/baixar_provas"/>
            <item
                android:id="@+id/menu_preferencias"
                android:icon="@drawable/ic_preferencias"
                android:showAsAction="always"
                android:title="@string/prefer_ncias"/>
        </menu>
    </item>

</menu>